testcases/phase1/check05dxit-FuncRetType.rc
function : bool foo() {return false;}
function : void bar() {return;}
function : void main() {
	int x;
	x = x + foo(); // error: bool incompatible with + op
	x = bar();     // error: void not assignable to int
}


int x = 3;
function : int & baz() {return x;}
function : int bazy() {return 1;}
function : void main2() {

	baz()++;  //no error, baz() should be marked as modifiable L-value

	bazy()++; // error: bazy() is not a modifiable L-value	
}
